--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -30,6 +30,9 @@ jobs:
           git commit -m "Update Excel on $(date '+%Y-%m-%d')"
           git push
 
+      - name: Check generated files
+        run: ls -lh reports/
+      
       - name: Send LINE message with file link
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
