--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add reports/*.xlsx
+          git add reports/除權息資料排序結果.xlsx
           git commit -m "Update Excel on $(date '+%Y-%m-%d')"
           git push
 
