--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -18,6 +18,9 @@ jobs:
 
       - name: Install dependencies
         run: pip install requests pandas openpyxl
+      - name: Install dependencies
+        run: |
+          pip install requests pandas openpyxl line-bot-sdk
      
       - name: Create reports directory
         run: mkdir -p reports
