--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install requests pandas openpyxl line-bot-sdk
+
+      - name: Set permissions
+        run: chmod 777 reports/
      
       - name: Create reports directory
         run: mkdir -p reports
