--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -18,24 +18,25 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install requests pandas openpyxl
-      - name: Install dependencies
-        run: |
-          pip install requests pandas openpyxl line-bot-sdk
+        run: pip install requests pandas openpyxl line-bot-sdk
 
+      - name: Create reports directory
+        run: mkdir -p reports
+        
       - name: Set permissions
         run: chmod 777 reports/
      
-      - name: Create reports directory
-        run: mkdir -p reports
+      - name: Run Python script
+        run: |
+         python stock_ex.py || echo "Python script failed!"
 
-     - name: Run Python script
-       run: |
-         python your_script.py || echo "Python script failed!"
  
       - name: Run script and generate Excel
         run: python stock_ex.py
 
+      - name: Check generated files
+        run: ls -lh reports/
+        
       - name: Commit and push Excel
         run: |
           git config --global user.name 'github-actions[bot]'
@@ -43,10 +44,7 @@ jobs:
           git add reports/除權息資料排序結果.xlsx
           git commit -m "Update Excel on $(date '+%Y-%m-%d')"
           git push
-
-      - name: Check generated files
-        run: ls -lh reports/
-      
+     
       - name: Send LINE message with file link
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
