--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -2,7 +2,7 @@ name: Weekly LINE Push
 
 on:
   schedule:
-    - cron: '0 12 * * 5'  # 每週晚上 8:00（台灣時間 UTC+8）
+    - cron: '0 12 * * 5'  # 每週五晚上 8:00（台灣時間 UTC+8）
   workflow_dispatch:
 
 permissions:
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
@@ -22,29 +23,27 @@ jobs:
 
       - name: Create reports directory
         run: mkdir -p reports
-        
-      - name: Set permissions
-        run: chmod 777 reports/
-     
-      - name: Run Python script
-        run: |
-         python stock_ex.py || echo "Python script failed!"
 
- 
-      - name: Run script and generate Excel
+      - name: Run Python script
         run: python stock_ex.py
+
+      - name: Rename Excel file (avoid Unicode issues)
+        run: |
+          if [ -f "reports/除權息資料排序結果.xlsx" ]; then
+            mv "reports/除權息資料排序結果.xlsx" "reports/dividend_report.xlsx"
+          fi
 
       - name: Check generated files
         run: ls -lh reports/
-        
+
       - name: Commit and push Excel
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add reports/除權息資料排序結果.xlsx
-          git commit -m "Update Excel on $(date '+%Y-%m-%d')"
+          git add reports/dividend_report.xlsx
+          git commit -m "Update Excel on $(date '+%Y-%m-%d')" || echo "No changes to commit"
           git push
-     
+
       - name: Send LINE message with file link
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
