--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add reports/report.html
+          git add docs/report.html
           git commit -m "自動產生最新報表 HTML" || echo "No changes to commit"
           git push
 
