--- a/.github/workflows/line_ex.yml
+++ b/.github/workflows/line_ex.yml
@@ -20,8 +20,9 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install pandas requests line-bot-sdk
-             pip install openpyxl
+        run: |
+          pip install pandas requests line-bot-sdk
+          pip install openpyxl
 
       - name: 產生 HTML 報表
         run: python stock_ex.py  # 這支腳本內部完成資料擷取+產生 docs/report.html
